Main terminé + Refacto

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ public/build/app.5beb12b5.js
 public/build/558.e29dbc85.css
 public/build/558.8819742a.js.LICENSE.txt
 public/build/558.8819742a.js
+
+node_modules/.cache/babel-loader/
