--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@fontsource/roboto-condensed": "^4.5.4",
         "bootstrap-datepicker": "^1.9.0",
-        "bootstrap-icons": "^1.8.1"
+        "bootstrap-icons": "^1.8.1",
+        "chart.js": "^3.4.1"
     }
 }
